# record_linkage_gui

./: .gitignore  README.md  environment.yml  pyproject.toml  user_story.md
.github/workflows/: testsuite.yml
docs/: component_specification.md  components.md  functional_specification.md  use_cases.md  user_story.md
record_linkage_package/: gui_application.py  pyproject.toml
src/record_linkage/: __init__.py  app.py
tests/: test_app.py  test_gui_app.py
tests/test_data/: sample_data.csv
