[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "record_linkage_package"
version = "0.0.1"
authors = [
  {name="Todd Nobles", email="tnobles@uw.edu"},{ name="Honglam Van", email="honglamv7@gmail.com"},{name="Natalie Turner", email="nturner2@uw.edu"}, {name="Terresa Tran", email="tran10@uw.edu"},{name="Julia Zhu", email = "qzhu35@uw.edu"}
]
description = "A package for Record Linkage GUI project"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/toddnobles/record_linkage_gui"
Issues = "https://github.com/toddnobles/record_linkage_gui/issues"

[tool.ruff.lint]
select = ["E",
"W",
"F",
"B",
"A",
"N",
"I",
"D",
"C4",
"SIM",
"UP"]
ignore = ["D203", "D213"]

# Optional upgrades beyond the default ruff rules
# [tool.ruff.lint]
# select = [
#    "E", # pycodestyle: detect deviations from PEP8 rules
#    "W", # pycodestyle warnings: detect deviations from PEP8 suggestions
#    "F", # Pyflakes: detect code errors, potential bugs
#    "B", # flake8-bugbear: detect antipatterns that can lead to bugs
#    "A", # flake8-builtins: detect overloading python builtins
#    "N", # pep8-naming: detect deviations from PEP naming conventions
#    "I", # isort: better import organization
#    "D", # pydocstyle: check docstrings
#    "C4", # flake8-comprehensions: check for code simplifications with comprehensions
#    "SIM", # flake8-simplify: check for code simplifications
#    "UP", # pyupgrade: check for syntax improvments in new python versions
#    "C90", # McCabe complexity
# ]